bad/missing_return.example_compiler_output
ERROR
[1mbad/missing_return.lat:2:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
string foo() {}
[1;32m^[m
